--- a/public/style.css
+++ b/public/style.css
@@ -78,7 +78,14 @@ td {
     display: flex;
     flex-direction: row;
     width: 71.6%;
-    
+}
+
+.resetButton{
+    background-color: #f2f2f2;
+    padding: 10px 0 0 20px;
+    width: 70%;
+    border-radius: 1px solid #f2f2f2;
+    font-weight: bold;
 }
 
 .left,
