--- a/public/style.css
+++ b/public/style.css
@@ -29,39 +29,47 @@ html {
     padding: 10px 0 20px 20px;
     width: 70%;
     border-radius: 1px solid #f2f2f2;
-    max-height: 300px;  /* Đặt chiều cao tối đa */
-    overflow-y: auto;   /* Cho phép cuộn dọc */
+    max-height: 300px;
+    /* Đặt chiều cao tối đa */
+    overflow-y: auto;
+    /* Cho phép cuộn dọc */
 }
-.top-text{
+
+.top-text {
     font-weight: bold;
 }
 
 /* CSS */
 .table-container {
-    display: inline-block;  /* Make the containers sit side by side */
-    margin: 10px 5px 0 0;    /* Add some space between the tables */
+    display: inline-block;
+    /* Make the containers sit side by side */
+    margin: 10px 5px 0 0;
+    /* Add some space between the tables */
 }
 
 table {
     display: flex;
     flex-direction: row;
-    gap: 1em; /* Change this to adjust the space between columns */
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
+    gap: 1em;
+    /* Change this to adjust the space between columns */
 }
 
 td {
     border: 1px solid black;
     padding-bottom: 3px;
-    width: 20px; 
-    height: 20px; 
-    text-align: center; 
+    width: 20px;
+    height: 20px;
+    text-align: center;
 }
 
-.circle-white, .circle-blue, .circle-green, .circle-yellow, .circle-orange {
+.circle-green,
+.circle-purple,
+.circle-red,
+.circle-yellow,
+.circle-blue,
+.circle-pink,
+.circle-lucbao,
+.circle-orange {
     border: 1px solid black;
     border-radius: 50%;
     display: inline-block;
@@ -80,7 +88,8 @@ td {
     width: 71.6%;
 }
 
-.resetButton{
+.resetButton,
+.resetBtn {
     background-color: #f2f2f2;
     padding: 10px 0 0 20px;
     width: 70%;
@@ -119,28 +128,39 @@ input {
     font-weight: bold;
 }
 
-.circle-white {
-    background-color: white;
-    color: #696969;
-}
-
-.circle-blue {
-    background-color: blue;
-}
-
 .circle-green {
-    background-color: green;
+    background-color: rgb(0, 142, 69);
+}
+
+.circle-purple {
+    background-color: rgb(153, 0, 255);
+}
+
+.circle-red {
+    background-color: rgb(255, 0, 60);
 }
 
 .circle-yellow {
-    background-color: yellow;
-    color: #696969;
+    background-color: rgb(238, 255, 0);
+}
+
+.circle-blue {
+    background-color: rgb(0, 42, 255);
+}
+
+.circle-pink {
+    background-color: rgb(255, 0, 247);
+}
+
+.circle-lucbao {
+    background-color: rgb(102, 0, 255);
 }
 
 .circle-orange {
-    background-color: orange;
+    background-color: rgb(255, 0, 0);
 }
-.bottom{
+
+.bottom {
     background-color: #f2f2f2;
     padding: 10px 0 20px 20px;
     width: 70%;
